--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,6 +35,11 @@ jobs:
       with:
         go-version: '1.21'
 
+    - name: Initialize Go modules
+      run: |
+        go mod init github.com/dfoulkes/minio-exporter
+        go mod tidy
+
     - name: Determine version and create tag
       id: version
       run: |
