feat: update minio-go import path to v7 and adjust client initialization

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,7 +42,7 @@ jobs:
           go mod init github.com/dfoulkes/minio-exporter
         fi
         # Use older compatible versions that still have the log package
-        go get github.com/minio/minio-go@v7.0.95
+        go get github.com/minio/minio-go/v7@v7.0.95
         go get github.com/minio/minio@v0.0.0-20190523181636-b4eff10e2733
         go get github.com/prometheus/client_golang@v0.9.4
         go get github.com/prometheus/common@v0.4.1
